--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-      <img class="image" src="C:\Users\PC\Desktop\fm-soln-one\image-product-desktop.jpg" alt="Gabrielle Eau De Parfum bottle"> 
+      <img class="image" src="image-product-desktop.jpg" alt="Gabrielle Eau De Parfum bottle"> 
       <div class="text">
        <h6 class="Top">P E R F U M E</h6>
        <h2 >Gabrielle <br> Essence Eau <br> De Parfum </h2>
@@ -23,7 +23,7 @@
       <div class="price">
         <h2 class="current">$149.99</h2>
         <p class="previous"><s>$169.99</s></p> </div> 
-       <button><img class="icon" src="C:\Users\PC\Desktop\fm-soln-one\icon-cart.svg" alt="cart-icon">Add to Cart</button>
+       <button><img class="icon" src="icon-cart.svg" alt="cart-icon">Add to Cart</button>
       </div>
     </div> 
 </body>
