--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
-<link rel="icon" href="C:\Users\PC\Desktop\fm-soln-one\favicon-32x32.png">
+<link rel="icon" href="favicon-32x32.png">
 <title>Product Preview Card Component</title>
 </head>
 <body>
