--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-      <img class="image" src="/blob/main/image-product-desktop.jpg" alt="Gabrielle Eau De Parfum bottle"> 
+      <img class="image" src="image-product-desktop.jpg" alt="Gabrielle Eau De Parfum bottle"> 
       <div class="text">
        <h6 class="Top">P E R F U M E</h6>
        <h2 >Gabrielle <br> Essence Eau <br> De Parfum </h2>
